# protOS-kernel

./: .gitignore  CMakeLists.txt  MEMMAP.md  README.md  VFS.md  angry_cat_face.diff  linker.ld  memmap.md
docs/: error_codes.md  memory_map.md
extra/: cursor.aseprite  kpanic.aseprite  kpanic.c
ignore-scripts/esp/: NvVars  kernel.elf  limine.conf
ignore-scripts/esp/boot/: initramfs.tar
ignore-scripts/esp/efi/boot/: BOOTX64.EFI
include/: acpi.h  boot.h  gdt.h  globals.h  idt.h  io.h  main.h  memory.h  pic.h  pit.h  string.h
include/debug/: errors.h  logger.h  serial.h
include/drivers/: ps2.h  ps2_csa.h
include/drivers/ps2/: keyboard.h  mouse.h  ps2.h
include/drivers/ps2/scansets/: csa.h
include/filesystems/: devfs.h  tarfs.h  vfs.h
include/fonts/: niji-pixel-bold-16.h  niji-pixel-regular-16.h  niji-pixel-small-8.h
include/glyphs/: kpanic.h
include/graphics/: console.h  graphics.h  tty.h  vga.h
include/interrupts/: handlers.h  idt.h  interrupts.h  pic.h
include/limine/: limine.h
include/memory/: freelist_pmm.h  heap.h  memory.h  paging.h  pat.h  pmm.h  vmm.h
include/userspace/: elf.h  ipc.h  process.h  scheduler.h  syscalls.h  user_fb.h  userspace.h
include/utils/: linked_lists.h  ticket_lock.h  utils.h  wait_queue.h
initramfs/System/Assets/Fonts/: npbold16.fmp  npregular16.fmp  npsmall8.fmp
initramfs/System/Programs/: coqi.elf  corgi  edit  executable.elf  ls  panic  protofetch  protowm  read
lib/: CMakeLists.txt  crt0.c  graphics.c  io.c  process.c  proto.h
lib/include/: proto.h
lib/include/proto/: core.h  events.h  graphics.h
lib/src/: io.c  ipc.c  malloc.c  process.c  string.c  syscall.c
lib/src/core/: io.c  malloc.c  process.c  string.c  syscall.c
lib/src/events/: events.c
lib/src/graphics/: bmp.c  font.c  graphics.c
programs/: CMakeLists.txt
programs/coqi/: CMakeLists.txt  main.c
programs/corgi/: CMakeLists.txt
programs/corgi/include/: corgi.h  split.h  tools.h
programs/corgi/src/: main.c  split.c
programs/corgi/src/tools/: cd.c
programs/edit/: CMakeLists.txt
programs/edit/src/: main.c
programs/ls/: CMakeLists.txt
programs/ls/include/: ls.h
programs/ls/src/: main.c
programs/panic/: CMakeLists.txt
programs/panic/src/: main.c
programs/protofetch/: CMakeLists.txt
programs/protofetch/include/: protofetch.h
programs/protofetch/src/: main.c
programs/protowm/: CMakeLists.txt
programs/protowm/include/: cursor.h  globals.h  graphics.h  init.h  utils.h  window.h
programs/protowm/src/: cursor.c  globals.c  graphics.c  init.c  main.c  window.c
programs/read/: CMakeLists.txt
programs/read/src/: main.c
scripts/: addr2line.sh  build-and-run.sh  clean.sh  mkinitramfs.sh
src/: boot.c  gdt.c  globals.c  idt.c  io.c  main.c  memory.c  pic.c  pit.c  set_gdt.asm  string.c
src/debug/: errors.c  logger.c  serial.c
src/drivers/: ps2.c
src/drivers/ps2/: keyboard.c  mouse.c  ps2.c
src/filesystems/: devfs.c  tarfs.c  vfs.c  vfs_old.c~
src/graphics/: console.c  graphics.c  tty.c  vga.c
src/interrupts/: handlers.c  idt.c  interrupt-stub.asm  interrupts.c  pic.c
src/memory/: freelist_pmm.c  heap.c  memory.c  paging.c  pat.c  pmm.c  vmm.c
src/threads/: scheduler.c
src/userspace/: elf.c  enter-userspace.asm  ipc.c  process.c  scheduler.c  syscalls.c  user_fb.c  yield.asm
tests/elf-loading/: linker.ld  main.c
tests/executable/: linker.ld  main.c
tests/initramfs/: executable.elf
tests/initramfs/System/Programs/: executable.elf
tests/initramfs/system/programs/: executable.elf
